fixed visual bug where cars jump over due to transition

--- a/src/components/Road/Road.scss
+++ b/src/components/Road/Road.scss
@@ -6,5 +6,5 @@
     background-color: gray;
     display: flex;
     justify-content: space-evenly;
-
+    &--blurred { filter: blur(3px) }
 }
